Prevent horizontal scrollbar in origins translation menu

--- a/origins_translations/css/translations_ui.css
+++ b/origins_translations/css/translations_ui.css
@@ -199,7 +199,7 @@
   padding: .5em 1rem;
   background: #076cba;
   color: #fff;
-  overflow: auto;
+  overflow: hidden scroll;
   text-align: left;
   transition: left .3s ease, right .3s ease;
 }
@@ -213,7 +213,7 @@
 
 #origins-translation-container .origins-translation-button[aria-expanded='true'] ~ .origins-translation-menu {
   position: relative;
-  overflow: auto;
+  overflow: hidden scroll;
 }
 
 #origins-translation-container.ot-tl .origins-translation-menu,
